# epifx.covid

./: .gitignore  LICENSE  README.md  create_venv.sh  customtables_vacc.py  requirements.txt  run_forecast.py  run_standard.R
epifx_params/: forecast_ascertain_12.5.toml  forecast_ascertain_25.0.toml  forecast_ascertain_37.5.toml  forecast_back_to_school.toml  forecast_no_reversion.toml  forecast_partial_reversion.toml  forecast_template.toml  forecast_with_reversion.toml
forecast_plotting/: compare_ensemble_samples.R  forecast_summary_tables.Rmd  past_performance.R  plot_incidence.R  plot_incidence_spread.R  plot_parameter_CIs.R  plot_parameter_CIs_by_name.R  plot_trace_incidence.R  plot_trace_parameters.R  plot_vaccine_effect.R  plotting_common.R  produce_CI_plots.R  produce_state_summaries.R  produce_trace_plots.R
interface_functions/: data.R  ensemble_samples.R  epifx.R  vaccination.R  vaccination_dummy.R
local_epifx/: .gitignore  LICENSE  NEWS.rst  README.rst  requirements.txt  setup.cfg  tox.ini
local_epifx/doc/: changelog.rst  commands.rst  conf.py  contributing.rst  getting_started.rst  index.rst  observation_models.rst  release-process.rst  testing.rst
local_epifx/doc/_downloads/worked_example/: epifxlocns.py  generate-data.py  index.html
local_epifx/doc/images/: plot-dists.R
local_epifx/src/epifx/: __init__.py  det.py  model.py  obs.py  select.py  stoch.py  stoch_flow.py  summary.py  version.py
local_epifx/src/epifx/cmd/: __init__.py  cmp.py  decl_fs.py  decl_json.py  declarative.py  forecast.py  json.py  locns.py  replay.py  scan.py  settings.py  summary.py  template.py
local_epifx/src/epifx/example/seir/: seeiir.toml  seeiir_scalar.toml  seir.py  seir.toml
local_epifx/tests/: test_sample_counts.py  test_seir_forecast.py  test_select.py
local_pypfilt/: .gitignore  .readthedocs.yml  NEWS.rst  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
local_pypfilt/doc/: conf.py  contributing.rst  index.rst  install.rst  release-process.rst  testing.rst  unicode.rst
local_pypfilt/doc/api/: cache.rst  check.rst  config.rst  context.rst  examples.rst  index.rst  io.rst  model.rst  obs.rst  params.rst  pfilter.rst  plot.rst  pypfilt.rst  resample.rst  state.rst  stats.rst  summary.rst  sweep.rst  time.rst
local_pypfilt/doc/concepts/: index.rst
local_pypfilt/doc/getting-started/: conclusion.rst  equations.rst  example_files.rst  forecasts.rst  index.rst  observations.rst  overview.rst  plotting.rst  scenarios.rst
local_pypfilt/doc/how-to/: index.rst
local_pypfilt/src/pypfilt/: __init__.py  cache.py  check.py  config.py  context.py  io.py  model.py  obs.py  params.py  pfilter.py  plot.py  resample.py  state.py  stats.py  summary.py  sweep.py  time.py  version.py
local_pypfilt/src/pypfilt/examples/: predation.py  predation.toml
local_pypfilt/tests/: test_cache.py  test_declarative_config.py  test_predation.py  test_resample.py  test_stats.py
vaccination/code/: functions_age_classes.R  functions_matrices.R  process_AIR_dose_data.R  process_first_dose_timeseries.R  simple_first_dose_projection.R  vaccination_counterfactual.R
