[metadata]
name = epifx
version = 0.6.1
url = https://bitbucket.org/robmoss/epidemic-forecasting-for-python/
project-urls =
    Documentation = https://epifx.readthedocs.io/en/latest/
    Changelog = https://epifx.readthedocs.io/en/latest/changelog.html
description = Epidemic forecasting with mechanistic infection models
long_description = file: README.rst, NEWS.rst
long_description_content_type = text/x-rst
license = BSD 3-Clause License
license_file = LICENSE
author = Rob Moss
author_email = rgmoss@unimelb.edu.au
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Mathematics

[options]
python_requires = >= 3.6
zip_safe = True
packages = find:
package_dir =
    = src
install_requires =
    h5py >= 2.2
    numpy >= 1.17
    scipy >= 0.11
    pypfilt >= 0.6.0
setup_requires =
    setuptools >= 38.3.0

[options.packages.find]
where = src

[options.package_data]
* = *.ssv, *.toml

[options.entry_points]
console_scripts =
    epifx-cmp = epifx.cmd.cmp:main
    epifx-forecast = epifx.cmd.forecast:main
    epifx-json = epifx.cmd.json:main
    epifx-locns = epifx.cmd.locns:main
    epifx-replay = epifx.cmd.replay:main
    epifx-scan = epifx.cmd.scan:main
    epifx-summary = epifx.cmd.summary:main
    epifx-template = epifx.cmd.template:main
    epifx-decl-fs = epifx.cmd.decl_fs:main
    epifx-decl-json = epifx.cmd.decl_json:main

[build_sphinx]
source-dir = doc
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
