[metadata]
name = pypfilt
version = 0.6.0
url = https://bitbucket.org/robmoss/particle-filter-for-python/
project-urls =
    Documentation = https://pypfilt.readthedocs.io/en/latest/
    Changelog = https://pypfilt.readthedocs.io/en/latest/changelog.html
description = Bootstrap particle filter for epidemic forecasting
long_description = file: README.rst, NEWS.rst
license = BSD 3-Clause License
license_file = LICENSE
author = Rob Moss
author_email = rgmoss@unimelb.edu.au
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Mathematics

[options]
python_requires = >= 3.6
zip_safe = True
packages = find:
package_dir =
    = src
install_requires =
    h5py >= 2.2
    numpy >= 1.17
    scipy >= 0.11
    toml >= 0.10
setup_requires =
    setuptools >= 38.3.0

[options.extras_require]
plot = matplotlib >= 1.5

[options.packages.find]
where = src

[options.package_data]
* = *.toml, *.ssv

[build_sphinx]
source-dir = doc
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
